fixing issue 41 (page headers have wrong color)

--- a/saasta/wp-content/themes/saasta/style.css
+++ b/saasta/wp-content/themes/saasta/style.css
@@ -631,7 +631,7 @@ a img {
 	But you'll look sweet upon the seat of a bicycle built for two." */
 
 div.post h2 { 
-	background-color: #DDD391;
+	background-color: #dac8c7;
 	border-bottom: 1px solid black;
 	padding: 0.1em;
 }
